# nexa

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
nexa/: __init__.py  cli.py  models.py  utils.py
nexa/core/: __init__.py  cors.py  crawler.py  detectors.py  extractors.py  fingerprint.py  headers.py  http.py  js_collector.py  probe.py  reporting.py  sourcemap.py  validators.py  waf_bypass.py
tests/: test_detectors.py  test_fingerprint.py  test_utils.py
